fixed project popup

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -103,7 +103,7 @@
 
                 <!-- Trillo Project -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/trillo.jpg" alt="Trillo Project" />
+                    <img src="./img/projects/trillo.jpg" alt="Trillo Project" />
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Web App</p>
