--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -154,7 +154,7 @@
                 <h2 class="heading-secondary">How it works &mdash; simple as 1,2,3</h2>
             </div>
             <div class="row">
-                <div class="col span-1-of-2 steps-box ">
+                <div class="col span-1-of-2 steps-box">
                     <img class="section__steps--app-screen js--wp-2" src="./images/app-iPhone.png"
                         alt="Omnifood app on iphone">
                 </div>
@@ -528,7 +528,7 @@
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
-s    <script src="./vendors/js/jquery.waypoints.min.js"></script>
+    <script src="./vendors/js/jquery.waypoints.min.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
