changed projects BG

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -83,8 +83,8 @@
             <!-- <h2 class="heading-secondary" data-text="About me">About me</h2> -->
             <div class="about__items js--wp-2">
                 <div class="about__items-text">
-                    <h3><span>Hi!</span></h3>
-                    <p>I'm <strong>Jaime</strong>, an enthusiastic and detail-oriented front-end developer. I focuse
+                    <h3><span>Hi, I'm Jaime.</span></h3>
+                    <p>I'm an enthusiastic and detail-oriented front-end developer. I focuse
                         on building websites upon the principles of maintainable and scalable code, responsive design,
                         and web performance.
                     </p>
