added responsive design

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -115,7 +115,7 @@
             <div class="about__items js--wp-2">
                 <div class="about__items-text">
                     <h3><span>Hi, I'm Jaime.</span></h3>
-                    <p>I'm an enthusiastic and detail-oriented front-end developer. I focuse
+                    <p>I'm an enthusiastic and detail-oriented front-end developer. I focus
                         on building websites upon the principles of maintainable and scalable code, responsive design,
                         and web performance.
                     </p>
@@ -181,7 +181,7 @@
                 <div class="popup" id="trillo-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/trillo.png" alt="Trillo Project" class="popup__img">
+                            <img src="./img/projects/trillo.png" alt="Trillo Project" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#porfolio" class="popup__close">&times;</a>
@@ -415,12 +415,12 @@
                 </div>
             </div>
 
-            <div class="btn">
-                <a class="btn__link" href="#"> View more </a>
-                <div class="line line--one"></div>
+            <!-- <div class="btn"> -->
+                <a class="btn btn__link" href="#"> View more </a>
+                <!-- <div class="line line--one"></div>
                 <div class="line line--two"></div>
                 <div class="line line--three"></div>
-                <div class="line line--four"></div>
+                <div class="line line--four"></div> -->
             </div>
         </section>
 
